--- a/_config.yml
+++ b/_config.yml
@@ -5,16 +5,16 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://haojieshi98.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://1170801121.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: Haojie Shi # add your name
+author: Zhaochong An # add your name
 author-img: selfphoto.jpg # add your photo
-about-author: I am a senior student major in automation in Harbin Institute of Technology. Weclome to my homepage! # add description
+about-author: I am a senior student major in computer science in Harbin Institute of Technology. Weclome to my homepage! # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: haojieSHI98 # add your Github handle
+social-github: 1170801121 # add your Github handle
 social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
