--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Zhaochong An # add your name
-author-img: selfphoto.jpg # add your photo
+author-img: me.jpg # add your photo
 about-author: I am a senior student major in computer science in Harbin Institute of Technology. Weclome to my homepage! # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
