--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,11 @@ social-email: # add your Email address
 discus-identifier: mr-brown # add your discus identifier
 
 # Tracker
-analytics: # Google Analytics
+analytics: UA-176053492-1 
+# Google Analytics
 
 # Google Analytics
-google_analytics: UA-176053492-1
+# google_analytics: UA-176053492-1
 
 # Build Settings
 markdown: kramdown
