--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ discus-identifier: mr-brown # add your discus identifier
 # Tracker
 analytics: UA-176053492-1 
 # Google Analytics
-
+baidu-analysis: 0a3c6d537fbd69ca6ca0cbb578780c85
 # Google Analytics
 # google_analytics: UA-176053492-1
 
