--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ social-email: # add your Email address
 discus-identifier: mr-brown # add your discus identifier
 
 # Tracker
-analytics: UA-176053492-1 
+#analytics: UA-176053492-1 
 # Google Analytics
 baidu-analysis: 0a3c6d537fbd69ca6ca0cbb578780c85
 # Google Analytics
